--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Category
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: navy;">
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: rgba(0, 128, 0, 0.769);">
                                 <li><a class="dropdown-item" href="#">Camping Tent</a></li>
                                 <li><a class="dropdown-item" href="#">Travel backpack</a></li>
                                 <li><a class="dropdown-item" href="#">Hiking Boots</a></li>
@@ -101,11 +101,58 @@
             </div>
         </section>
 
-        <!-- home content -->
-
-
     </div>
 
+    <!-- top cards -->
+    <div class="container" id="top-cards">
+        <div class="row">
+            <div class="col-md-4 py-3 py-md-0">
+                <div class="card" style="background-color:#a9a9a962 ;">
+                    <img src="./images/tent6.png" alt="">
+                    <div class="card-img-overlay">
+                        <h4 class="card-title">Camping Tent</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quae.</p>
+                        <p class="cashbtn"> <strong>₹999 <strike>₹1499</strike></strong></p>
+                        <div class="orderbtn"> <button>Order Now</button></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 py-3 py-md-0">
+                <div class="card" style="background-color:#a9a9a962 ;">
+                    <img src="./images/sleeping bag02.png" alt="">
+                    <div class="card-img-overlay">
+                        <h4 class="card-title">Sleeping Bag</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quae.</p>
+                        <p class="cashbtn"> <strong>₹799 <strike>₹1199</strike></strong></p>
+                       <div class="orderbtn"> <button>Order Now</button></div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-md-4 py-3 py-md-0">
+                <div class="card" style="background-color:#a9a9a962 ;">
+                    <img src=".//images/travelbag5.png" alt="">
+                    <div class="card-img-overlay">
+                        <h4 class="card-title">Travel Bag</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quae.</p>
+                        <p class="cashbtn"> <strong>₹799 <strike>₹999</strike></strong></p>
+                        <div class="orderbtn"> <button>Order Now</button></div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- banner -->
+
+    <div class="banner">
+        <div class="content">
+            <h1>Get Up To 50% Off</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, at?</p>
+            <div id="bannerbtn"><button>SHOP NOW</button></div>
+        </div>
+    </div>
 
 
 
