--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <!-- top cards -->
     <div class="container" id="top-cards">
         <div class="row">
-            <div class="col-md-4 py-3 py-md-0">
+            <div class="col-md-4 py-3 py-md-0 carddiv">
                 <div class="card" style="background-color:#a9a9a962 ;">
                     <img src="./images/tent6.png" alt="">
                     <div class="card-img-overlay">
