--- a/index.html
+++ b/index.html
@@ -373,25 +373,25 @@
         <div class="footer-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3 col-md-6 footer-content">
+                    <div class="col-lg-3 col-md-6 footer-contact">
                         <h3>Mountain City</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, maxime!</p>
-                        <p>Kochi<br><br>
-                            India <br><br>
-                        </p>
+                       <br> <p>Kochi <br><br>
+                            India <br>
+                        </p><br>
                         <i class="fas fa-phone">
                             <strong>+91 9747176586</strong></i>
-                        <i class="fa-solid fa-envelope"> sachinm06@aol.com</i>
+                        <i class="fa-solid fa-envelope"> <strong>sachinm06@aol.com</strong></i>
                     </div>
-                    <div class="col-lg-3 col-md-6 footer-content">
+                    <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Usefull Links</h4>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="">Services</a></li>
-                        <li><a href="">Privacy policy </a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Privacy_policy">Privacy policy </a></li>
                     </div>
-                    <div class="col-lg-3 col-md-6 footer-content">
+                    <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Our Services</h4>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, quae.</p>
                         <ul>
@@ -407,16 +407,27 @@
                         <h4>Our Social Network</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur, voluptatem?</p>
                         <div class="social-links mt-3">
-                            <a href="" class="twitter"> <i class="fa-brands fa-twitter"></i></a>
-                            <a href="" class="twitter"> <i class="fa-brands fa-instagram"></i></a>
-                            <a href="" class="twitter"> <i class="fa-brands fa-linkedin"></i></a>
-                            <a href="" class="twitter"> <i class="fa-brands fa-github"></i></a>
+                            <a href="https://twitter.com/sachinm06" class="twitter"> <i class="fa-brands fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/insomnia___c/" class="twitter"> <i class="fa-brands fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/sachin-m-6733baa3/" class="twitter"> <i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://github.com/Sachinm06" class="twitter"> <i class="fa-brands fa-github"></i></a>
+                            <a href="https://myaccount.google.com/profile" class="twitter"><i class="fa-brands fa-google-plus"></i></a>
 
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="container py-4">
+            <div class="copyright">
+                &copy; Copyright <strong> Sachin M.Sibichan</strong>.All Rights Reserved
+            </div>
+        </div>
     </footer>
 
 
+    <a href="" class="arrow"><i><img src="./images/arrow.png" alt="" width="50px"></i></a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
