--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 Category
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown"
-                                style="background-color: rgba(0, 128, 0, 0.769);">
+                                style="background-color: #0474BC">
                                 <li><a class="dropdown-item" href="#">Camping Tent</a></li>
                                 <li><a class="dropdown-item" href="#">Travel backpack</a></li>
                                 <li><a class="dropdown-item" href="#">Hiking Boots</a></li>
@@ -382,7 +382,7 @@
                         <i class="fas fa-phone">
                             <strong>+91 9747176586</strong></i>
                         <i class="fa-solid fa-envelope"> <strong>sachinm06@aol.com</strong></i>
-                    </div>
+                    </div><br>
                     <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Usefull Links</h4>
                         <li><a href="index.html">Home</a></li>
