--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
                                 Category
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown"
-                                style="background-color: rgba(0, 128, 0, 0.769);">
+                                style="background-color: #0474BC;">
                                 <li><a class="dropdown-item" href="#">Camping Tent</a></li>
                                 <li><a class="dropdown-item" href="#">Travel backpack</a></li>
                                 <li><a class="dropdown-item" href="#">Hiking Boots</a></li>
