--- a/signup.html
+++ b/signup.html
@@ -60,7 +60,7 @@
                                 Category
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown"
-                                style="background-color: rgba(0, 128, 0, 0.769);">
+                                style="background-color: #0474BC;">
                                 <li><a class="dropdown-item" href="#">Camping Tent</a></li>
                                 <li><a class="dropdown-item" href="#">Travel backpack</a></li>
                                 <li><a class="dropdown-item" href="#">Hiking Boots</a></li>
@@ -88,25 +88,27 @@
         <div class="container login">
             <div class="row">
                 <div class="col-md-4" id="side1">
-                    <h3>Hello,</h3>
-                    <p>Create New Account</p>
-                    <div id="btn"><a href="signup.html">Sign Up</a></div>
+                    <h3>Welcome Back!</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, alias.</p>
+                    <div id="btn"><a href="login.html">Login</a></div>
                 </div>
                 <div class="col-md-8" id="side2">
-                    <h3>Login Account</h3>
+                    <h3>Create Account</h3>
                     <div class="inp">
-                        <input type="text" placeholder="User Name" required>
+                        <input type="text" placeholder="Name" required>
+                        <input type="email" placeholder="Email" required>
                         <input type="password" placeholder="Password" required>
 
+
                     </div>
-                    <p>Forget Your Password</p>
+                    <p>Lorem ipsum dolor sit amet.</p>
                     <div class="icons">
                         <i class="fa-brands fa-twitter"></i>
                         <i class="fa-brands fa-facebook"></i>
                         <i class="fa-brands fa-instagram"></i>
 
                     </div>
-                    <div id="login"><button>LOG IN</button></div>
+                    <div id="login"><button>SIGN UP</button></div>
                 </div>
             </div>
         </div>
