--- a/index.html
+++ b/index.html
@@ -346,11 +346,13 @@
     <!-- offer -->
 
     <div class="container" id="offer">
-        <div class="row">
+        <div class="row" ">
+            
+
             <div class="col-md-4 py-3 py-md-0">
                 <i class="fa-solid fa-cart-shopping"></i>
                 <h5>Free Shipping</h5>
-                <p>On order over ₹1500</p>
+                <p>On order of ₹1500 & above</p>
             </div>
             <div class="col-md-4 py-3 py-md-0">
                 <i class="fa-solid fa-truck"></i>
@@ -359,9 +361,11 @@
             </div>
             <div class="col-md-4 py-3 py-md-0">
                 <i class="fa-solid fa-thumbs-up"></i>
-                <h5>Big choice</h5>
-                <p>Of product</p>
+                <h5>Big Happiness</h5>
+                <p>Wide choice of products</p>
             </div>
+           
+
         </div>
 
     </div>
@@ -376,7 +380,8 @@
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h3>Mountain City</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, maxime!</p>
-                       <br> <p>Kochi <br><br>
+                        <br>
+                        <p>Kochi <br><br>
                             India <br>
                         </p><br>
                         <i class="fas fa-phone">
@@ -407,11 +412,16 @@
                         <h4>Our Social Network</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur, voluptatem?</p>
                         <div class="social-links mt-3">
-                            <a href="https://twitter.com/sachinm06" class="twitter"> <i class="fa-brands fa-twitter"></i></a>
-                            <a href="https://www.instagram.com/insomnia___c/" class="twitter"> <i class="fa-brands fa-instagram"></i></a>
-                            <a href="https://www.linkedin.com/in/sachin-m-6733baa3/" class="twitter"> <i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://github.com/Sachinm06" class="twitter"> <i class="fa-brands fa-github"></i></a>
-                            <a href="https://myaccount.google.com/profile" class="twitter"><i class="fa-brands fa-google-plus"></i></a>
+                            <a href="https://twitter.com/sachinm06" class="twitter"> <i
+                                    class="fa-brands fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/insomnia___c/" class="twitter"> <i
+                                    class="fa-brands fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/sachin-m-6733baa3/" class="twitter"> <i
+                                    class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://github.com/Sachinm06" class="twitter"> <i
+                                    class="fa-brands fa-github"></i></a>
+                            <a href="https://myaccount.google.com/profile" class="twitter"><i
+                                    class="fa-brands fa-google-plus"></i></a>
 
                         </div>
                     </div>
