--- a/product.html
+++ b/product.html
@@ -379,8 +379,8 @@
             </div>
             <div class="col-md-4 py-3 py-md-0">
                 <i class="fa-solid fa-thumbs-up"></i>
-                <h5>Big choice</h5>
-                <p>Of product</p>
+                <h5>Big Happiness</h5>
+                <p>Wide choice of products</p>
             </div>
         </div>
 
