--- a/about.html
+++ b/about.html
@@ -39,8 +39,8 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-" id="navbar">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="./images/linkicon.png" alt="" width="80px" height="50px">
-                    MOUNTAIN CITY</a>
+                <a class="navbar-brand logo1" href="index.html"><img src="./images/linkicon.png" alt="" width="80px" height="50px">
+                    MOUNTAIN <span>CITY</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -94,14 +94,18 @@
                     </div>
                 </div>
                 <div class="col-md-6 py-3 py-md-0">
-                    <p><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque quibusdam ab doloribus sapiente
+                    <p><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque quibusdam ab doloribus
+                        sapiente
                         fugit saepe, labore obcaecati tenetur, vel laboriosam rerum omnis incidunt placeat eius amet
                         culpa impedit expedita, esse alias dolores nulla odit similique corporis suscipit. Aliquid
-                        voluptatem corporis in odio amet iure. <br><br> obcaecati. Magnam ducimus molestias corrupti molestiae,
+                        voluptatem corporis in odio amet iure. <br><br> obcaecati. Magnam ducimus molestias corrupti
+                        molestiae,
                         voluptates at hic tempore, suscipit neque esse officiis assumenda odit facere deserunt
-                        voluptatibus laudantium. <br><br> Facilis, cupiditate magni exercitationem unde corporis cumque nobis
+                        voluptatibus laudantium. <br><br> Facilis, cupiditate magni exercitationem unde corporis cumque
+                        nobis
                         illo quia maiores, voluptatum rem modi pariatur adipisci? Eaque quod deleniti suscipit iusto
-                        odit. <br><br> Vitae eaque dolorem esse similique cupiditate adipisci quia consectetur corporis quae, nam
+                        odit. <br><br> Vitae eaque dolorem esse similique cupiditate adipisci quia consectetur corporis
+                        quae, nam
                         deleniti quo!</p>
                 </div>
             </div>
@@ -116,8 +120,10 @@
             <div class="row">
                 <div class="col-md-4 py-3 py-md-0">
                     <i class="fa-solid fa-cart-shopping"></i>
+                
+                    
                     <h5>Free Shipping</h5>
-                    <p>On order over ₹1500</p>
+                    <p>On order of ₹1499 & above</p>
                 </div>
                 <div class="col-md-4 py-3 py-md-0">
                     <i class="fa-solid fa-truck"></i>
@@ -199,7 +205,7 @@
             </div>
         </footer>
 
-
+        <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
         <a href="" class="arrow"><i><img src="./images/arrow.png" alt="" width="50px"></i></a>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
