--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-" id="navbar">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="./images/linkicon.png" alt="" width="80px" height="50px">
-                    MOUNTAIN CITY</a>
+                <a class="navbar-brand logo1" href="index.html"><img src="./images/linkicon.png" alt="" width="80px" height="50px">
+                    MOUNTAIN <span>CITY</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
