--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
 
     <div class="top-navbar">
         <div class="top-icons">
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://twitter.com/sachinm06" class="twitter"> <i
+                class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.instagram.com/insomnia___c/" class="twitter"> <i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/sachin-m-6733baa3/" class="twitter"> <i
+                    class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/Sachinm06" class="twitter"> <i
+                    class="fa-brands fa-github"></i></a>
+
         </div>
         <div class="other-links">
             <button id="btn-login"><a href="login.html">Login</a></button>
@@ -39,8 +45,8 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-" id="navbar">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="./images/linkicon.png" alt="" width="80px" height="50px">
-                    MOUNTAIN CITY</a>
+                <a class="navbar-brand logo1" href="index.html"><img src="./images/linkicon.png" alt="" width="80px" height="50px">
+                    MOUNTAIN <span>CITY</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -352,7 +358,7 @@
             <div class="col-md-4 py-3 py-md-0">
                 <i class="fa-solid fa-cart-shopping"></i>
                 <h5>Free Shipping</h5>
-                <p>On order of ₹1500 & above</p>
+                <p>On order of ₹1499 & above</p>
             </div>
             <div class="col-md-4 py-3 py-md-0">
                 <i class="fa-solid fa-truck"></i>
