--- a/product.html
+++ b/product.html
@@ -39,8 +39,8 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-" id="navbar">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="./images/linkicon.png" alt="" width="80px" height="50px">
-                    MOUNTAIN CITY</a>
+                <a class="navbar-brand logo1" href="index.html"><img src="./images/linkicon.png" alt="" width="80px" height="50px">
+                    MOUNTAIN <span>CITY</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -123,7 +123,7 @@
                 <div class="card">
                     <img src="./images/bottle.avif" alt="">
                     <div class="card-body">
-                        <h3>Isothermal Bottle</h3>
+                        <h3>Bottle</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, minima.</p>
                         <div class="star">
                             <span>
@@ -204,7 +204,7 @@
                 <div class="card">
                     <img src="./images/quickrow.avif" alt="">
                     <div class="card-body">
-                        <h3>Climbing Quickdraw</h3>
+                        <h3>Climbing Tool</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, minima.</p>
                         <div class="star">
                             <span>
@@ -370,7 +370,7 @@
             <div class="col-md-4 py-3 py-md-0">
                 <i class="fa-solid fa-cart-shopping"></i>
                 <h5>Free Shipping</h5>
-                <p>On order over ₹1500</p>
+                <p>On order of ₹1499 & above</p>
             </div>
             <div class="col-md-4 py-3 py-md-0">
                 <i class="fa-solid fa-truck"></i>
