--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
 
     <div class="top-navbar">
         <div class="top-icons">
-            <a href="https://twitter.com/sachinm06" class="twitter"> <i
-                class="fa-brands fa-twitter"></i></a>
-                <a href="https://www.instagram.com/insomnia___c/" class="twitter"> <i
+            <a href="https://twitter.com/sachinm06" class="twitter"> <i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.instagram.com/insomnia___c/" class="twitter"> <i
                     class="fa-brands fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/sachin-m-6733baa3/" class="twitter"> <i
                     class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/Sachinm06" class="twitter"> <i
-                    class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/Sachinm06" class="twitter"> <i class="fa-brands fa-github"></i></a>
 
         </div>
         <div class="other-links">
@@ -45,7 +43,8 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-" id="navbar">
             <div class="container">
-                <a class="navbar-brand logo1" href="index.html"><img src="./images/linkicon.png" alt="" width="80px" height="50px">
+                <a class="navbar-brand logo1" href="index.html"><img src="./images/linkicon.png" alt="" width="80px"
+                        height="50px">
                     MOUNTAIN <span>CITY</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -113,18 +112,18 @@
     <!-- top cards -->
     <div class="container" id="top-cards">
         <div class="row">
-            <div class="col-md-4 py-3 py-md-0 carddiv">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card" style="background-color:#a9a9a962 ;">
                     <img src="./images/tent6.png" alt="">
                     <div class="card-img-overlay">
-                        <h4 class="card-title">Camping Tent</h4>
+                        <h4 class="card-title" id="camp">Camping Tent</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quae.</p>
                         <p class="cashbtn"> <strong>₹999 <strike>₹1499</strike></strong></p>
                         <div class="orderbtn"> <button>Order Now</button></div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card" style="background-color:#a9a9a962 ;">
                     <img src="./images/sleeping bag02.png" alt="">
                     <div class="card-img-overlay">
@@ -136,7 +135,7 @@
                 </div>
 
             </div>
-            <div class="col-md-4 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card" style="background-color:#a9a9a962 ;">
                     <img src=".//images/travelbag5.png" alt="">
                     <div class="card-img-overlay">
@@ -167,7 +166,7 @@
         <div class="row" style="margin-top:30px">
 
 
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/Hiking T-shirt1.avif" alt="">
                     <div class="card-body">
@@ -186,7 +185,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/Trekking Trousers1.avif" alt="">
                     <div class="card-body">
@@ -205,7 +204,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/boots1.avif" alt="">
                     <div class="card-body">
@@ -224,7 +223,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/pole1.avif" alt="">
                     <div class="card-body">
@@ -247,7 +246,7 @@
 
 
         <div class="row" style="margin-top:30px">
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/chair.avif" alt="">
                     <div class="card-body">
@@ -267,7 +266,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/Hammock.avif" alt="">
                     <div class="card-body">
@@ -287,7 +286,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/camping tent01.avif" alt="">
                     <div class="card-body">
@@ -306,7 +305,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/camping stove.avif" alt="">
                     <div class="card-body">
@@ -355,24 +354,24 @@
         <div class="row" ">
             
 
-            <div class="col-md-4 py-3 py-md-0">
-                <i class="fa-solid fa-cart-shopping"></i>
-                <h5>Free Shipping</h5>
-                <p>On order of ₹1499 & above</p>
-            </div>
-            <div class="col-md-4 py-3 py-md-0">
-                <i class="fa-solid fa-truck"></i>
-                <h5>Fast Delivery</h5>
-                <p>World wide</p>
-            </div>
-            <div class="col-md-4 py-3 py-md-0">
-                <i class="fa-solid fa-thumbs-up"></i>
-                <h5>Big Happiness</h5>
-                <p>Wide choice of products</p>
-            </div>
-           
-
+            <div class=" col-md-4 py-3 py-md-0">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <h5>Free Shipping</h5>
+            <p>On order of ₹1499 & above</p>
         </div>
+        <div class="col-md-4 py-3 py-md-0">
+            <i class="fa-solid fa-truck"></i>
+            <h5>Fast Delivery</h5>
+            <p>World wide</p>
+        </div>
+        <div class="col-md-4 py-3 py-md-0">
+            <i class="fa-solid fa-thumbs-up"></i>
+            <h5>Big Happiness</h5>
+            <p>Wide choice of products</p>
+        </div>
+
+
+    </div>
 
     </div>
 
