--- a/product.html
+++ b/product.html
@@ -19,9 +19,14 @@
 
     <div class="top-navbar">
         <div class="top-icons">
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://twitter.com/sachinm06" class="twitter"> <i
+                class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.instagram.com/insomnia___c/" class="twitter"> <i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/sachin-m-6733baa3/" class="twitter"> <i
+                    class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/Sachinm06" class="twitter"> <i
+                    class="fa-brands fa-github"></i></a>
         </div>
         <div class="other-links">
             <button id="btn-login"><a href="login.html">Login</a></button>
@@ -100,11 +105,11 @@
         <div class="row" style="margin-top:30px">
 
 
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/gloves1.avif" alt="">
                     <div class="card-body">
-                        <h3>Hiking Gloves</h3>
+                        <h3>Hiking Glove</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, minima.</p>
                         <div class="star">
                             <span>
@@ -119,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/bottle.avif" alt="">
                     <div class="card-body">
@@ -138,7 +143,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/socks2.avif" alt="">
                     <div class="card-body">
@@ -157,7 +162,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/bum bag.avif" alt="">
                     <div class="card-body">
@@ -180,7 +185,7 @@
 
 
         <div class="row" style="margin-top:30px">
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/rope.avif" alt="">
                     <div class="card-body">
@@ -200,7 +205,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/quickrow.avif" alt="">
                     <div class="card-body">
@@ -220,7 +225,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/snowsaver.avif" alt="">
                     <div class="card-body">
@@ -239,7 +244,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/light.avif" alt="">
                     <div class="card-body">
@@ -263,7 +268,7 @@
         <div class="row" style="margin-top:30px">
 
 
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/cap.avif" alt="">
                     <div class="card-body">
@@ -282,11 +287,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/backpack5.avif" alt="">
                     <div class="card-body">
-                        <h3>Trekking Backpack</h3>
+                        <h3>Backpack</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, minima.</p>
                         <div class="star">
                             <span>
@@ -301,11 +306,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/mug.avif" alt="">
                     <div class="card-body">
-                        <h3>Isothermal Mug</h3>
+                        <h3>Thermal Mug</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, minima.</p>
                         <div class="star">
                             <span>
@@ -320,11 +325,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 py-3 py-md-0">
+            <div class="col-lg-3 col-md-6  ">
                 <div class="card">
                     <img src="./images/helmet.avif" alt="">
                     <div class="card-body">
-                        <h3>Climbing helmet</h3>
+                        <h3>helmet</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, minima.</p>
                         <div class="star">
                             <span>
