--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,14 @@
 
     <div class="top-navbar">
         <div class="top-icons">
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://twitter.com/sachinm06" class="twitter"> <i
+                class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.instagram.com/insomnia___c/" class="twitter"> <i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/sachin-m-6733baa3/" class="twitter"> <i
+                    class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/Sachinm06" class="twitter"> <i
+                    class="fa-brands fa-github"></i></a>
         </div>
         <div class="other-links">
             <button id="btn-login"><a href="login.html">Login</a></button>
