--- a/product.html
+++ b/product.html
@@ -105,7 +105,7 @@
         <div class="row" style="margin-top:30px">
 
 
-            <div class="col-lg-3 col-md-6  ">
+            <div class="col-lg-3 py-3 py-md-0  ">
                 <div class="card">
                     <img src="./images/gloves1.avif" alt="">
                     <div class="card-body">
@@ -124,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6  ">
+            <div class="col-lg-3 py-3 py-md-0  ">
                 <div class="card">
                     <img src="./images/bottle.avif" alt="">
                     <div class="card-body">
@@ -143,7 +143,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6  ">
+            <div class="col-lg-3 py-3 py-md-0  ">
                 <div class="card">
                     <img src="./images/socks2.avif" alt="">
                     <div class="card-body">
@@ -162,7 +162,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6  ">
+            <div class="col-lg-3 py-3 py-md-0  ">
                 <div class="card">
                     <img src="./images/bum bag.avif" alt="">
                     <div class="card-body">
@@ -185,7 +185,7 @@
 
 
         <div class="row" style="margin-top:30px">
-            <div class="col-lg-3 col-md-6  ">
+            <div class="col-lg-3 py-3 py-md-0  ">
                 <div class="card">
                     <img src="./images/rope.avif" alt="">
                     <div class="card-body">
@@ -205,7 +205,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6  ">
+            <div class="col-lg-3 py-3 py-md-0  ">
                 <div class="card">
                     <img src="./images/quickrow.avif" alt="">
                     <div class="card-body">
@@ -225,7 +225,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6  ">
+            <div class="col-lg-3 py-3 py-md-0  ">
                 <div class="card">
                     <img src="./images/snowsaver.avif" alt="">
                     <div class="card-body">
@@ -244,7 +244,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6  ">
+            <div class="col-lg-3 py-3 py-md-0  ">
                 <div class="card">
                     <img src="./images/light.avif" alt="">
                     <div class="card-body">
@@ -266,9 +266,7 @@
         </div>
 
         <div class="row" style="margin-top:30px">
-
-
-            <div class="col-lg-3 col-md-6  ">
+            <div class="col-lg-3 py-3 py-md-0  ">
                 <div class="card">
                     <img src="./images/cap.avif" alt="">
                     <div class="card-body">
@@ -287,7 +285,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6  ">
+            <div class="col-lg-3 py-3 py-md-0  ">
                 <div class="card">
                     <img src="./images/backpack5.avif" alt="">
                     <div class="card-body">
@@ -306,9 +304,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6  ">
+            <div class="col-lg-3 py-3 py-md-0  ">
                 <div class="card">
-                    <img src="./images/mug.avif" alt="">
+                    <img src="./images/mug2.avif" alt="">
                     <div class="card-body">
                         <h3>Thermal Mug</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, minima.</p>
@@ -325,7 +323,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6  ">
+            <div class="col-lg-3 py-3 py-md-0  ">
                 <div class="card">
                     <img src="./images/helmet.avif" alt="">
                     <div class="card-body">
